--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,7 +7,7 @@ li {
 }
 
 .header {
-  background-color: #26d0c9;
+  background-color: #ffe4cc4;
   color: #fff;
   height: 90px;
 }
@@ -21,6 +21,8 @@ li {
 .header-list li {
   float: left;
   padding: 33px 20px;
+  background-color: #26d0c9;
+  height: 90px;
   
 }
 
