--- a/stylesheet.css
+++ b/stylesheet.css
@@ -19,7 +19,7 @@ li {
 }
 
 .header-list li {
-  float: left;
+  float: right;
   padding: 33px 20px;
   background-color: #2f5167;
   height: 50px;
