--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,7 +22,7 @@ li {
   float: right;
   padding: 33px 20px;
   background-color: #2f5167;
-  height: 50px;
+  height: 40px;
 }
 
 .main {
@@ -31,6 +31,7 @@ li {
 
 .copy-container h1 {
   font-size: 140px;
+  color: #2f5167;
 }
 
 .copy-container h2 {
