--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,6 +24,12 @@ li {
   background-color: #2f5167;
   height: 23px;
 }
+input {
+  width: 400px;
+  padding: 33px 20px;
+  font-size: 18px;
+  border:1px solid #dee7ec;
+}
 
 .main {
   padding: 100px 80px;
