--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,7 +7,7 @@ li {
 }
 
 .header {
-  background-color: #26d0c9;
+  background-color: #778899;
   color: #fff;
   height: 90px;
 }
@@ -20,7 +20,7 @@ li {
 
 .header-list li {
   float: right;
-  padding: 33px 20px;
+  padding: 33px 30px;
   background-color: #2f5167;
   height: 23px;
 }
@@ -33,11 +33,14 @@ input {
 
 .main {
   padding: 100px 80px;
+  background-color: #B0C4DE;
+  color: #fff;
 }
 
 .copy-container h1 {
   font-size: 140px;
-  color: #2f5167;
+  color: #778899;
+  padding-top: 20px;
 }
 
 .copy-container h2 {
@@ -91,7 +94,7 @@ input, textarea{
 }
 
 .footer {
-  background-color: #2f5167;
+  background-color: #708090;
   color: #fff;
   height: 120px;
   padding: 40px;
