--- a/stylesheet.css
+++ b/stylesheet.css
@@ -20,7 +20,7 @@ li {
 
 .header-list li {
   float: right;
-  padding: 33px 38px;
+  padding: 33px 35px;
   background-color: #2f5167;
   height: 23px;
 }
@@ -32,7 +32,7 @@ input {
 }
 
 .main {
-  padding: 100px 80px;
+  padding: 50px 80px 80px 100px;
   background-color: #B0C4DE;
   color: #fff;
 }
@@ -40,7 +40,6 @@ input {
 .copy-container h1 {
   font-size: 140px;
   color: #696969;
-  padding-top: 20px;
 }
 
 .copy-container h2 {
