--- a/stylesheet.css
+++ b/stylesheet.css
@@ -53,7 +53,8 @@ input {
 }
 
 .section-title {
-  border-bottom: 2px solid #2f5167;
+  border-bottom: 2px solid #dee7ec;
+  color: #2f5167;
   font-size: 28px;
   padding-bottom: 15px;
   margin-bottom: 50px;
